--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,3 +66,16 @@ html {
 .font-orbitron {
   font-family: "Orbitron", sans-serif;
 }
+
+@keyframes blink {
+  0%,
+  100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+.animate-blink {
+  animation: blink 0.7s infinite;
+}
